--- a/RS_Content based.ipynb
+++ b/RS_Content based.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "cb2c1c2c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -20,7 +22,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "74852471",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies = pd.read_csv(\"tmdb_5000_movies.csv\")\n",
@@ -31,7 +35,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "02259c4d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -136,7 +142,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "b93f5242",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -386,7 +394,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "edd378d8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -407,7 +417,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "239c19bf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -428,7 +440,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "415544ce",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -454,7 +468,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "1907a541",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -475,7 +491,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "2fb6b9c9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -496,7 +514,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "67db76d1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -525,7 +545,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "c491018f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -722,7 +744,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "3403f0b6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -743,7 +767,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "00082ee6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -888,7 +914,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "e596c73b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -917,7 +945,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "40d64c24",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -948,7 +978,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "6d441f76",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1036,7 +1068,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "5fdd58b0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1064,7 +1098,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "a5efa5e4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1085,7 +1121,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "920c36fa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1107,7 +1145,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "2c971ea7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1135,7 +1175,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "ad22cddf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1156,7 +1198,9 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "010e6f49",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1268,7 +1312,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "91a67adf",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1300,7 +1346,9 @@
    "cell_type": "code",
    "execution_count": 24,
    "id": "42370909",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1321,7 +1369,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "74a8e781",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1342,7 +1392,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "5fe1dbcb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import ast"
@@ -1352,7 +1404,9 @@
    "cell_type": "code",
    "execution_count": 27,
    "id": "fc8b6b43",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1377,7 +1431,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "3b27c27b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1398,7 +1454,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "8bfe651a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1419,7 +1477,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "id": "993507b5",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1441,7 +1501,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "id": "83270be9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_genre(obj):\n",
@@ -1456,7 +1518,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "95c1dc28",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1477,7 +1541,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "id": "1a7e85a3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1509,7 +1575,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "ac18fa9c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['genres']= movies['genres'].apply(get_genre)"
@@ -1519,7 +1587,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "87bd0d3c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1639,7 +1709,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "b6f87327",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1660,7 +1732,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "id": "32f62842",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_keywords(obj):\n",
@@ -1675,7 +1749,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "id": "3fee38fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1716,7 +1792,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "id": "f6593088",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['keywords']= movies['keywords'].apply(get_keywords)"
@@ -1726,7 +1804,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "id": "673a1ca7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1846,7 +1926,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "70f8190e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1867,7 +1949,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "228a9ee2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_cast(obj):\n",
@@ -1887,7 +1971,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "d39d95f0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1908,7 +1994,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "id": "b400491e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['cast'] = movies['cast'].apply(get_cast)"
@@ -1918,7 +2006,9 @@
    "cell_type": "code",
    "execution_count": 45,
    "id": "1dbb1762",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2038,7 +2128,9 @@
    "cell_type": "code",
    "execution_count": 46,
    "id": "34d5c8f7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2059,7 +2151,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "ffd81364",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def fetch_director(obj):\n",
@@ -2077,7 +2171,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "id": "91279f4c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2098,7 +2194,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "0b7bde4e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['crew']=movies['crew'].apply(fetch_director)"
@@ -2108,7 +2206,9 @@
    "cell_type": "code",
    "execution_count": 50,
    "id": "d4705fc1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2223,7 +2323,9 @@
    "cell_type": "code",
    "execution_count": 51,
    "id": "293c7683",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['overview'] = movies['overview'].apply(lambda x: x.split())"
@@ -2233,7 +2335,9 @@
    "cell_type": "code",
    "execution_count": 52,
    "id": "54ce7d69",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2340,7 +2444,9 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "7af32c85",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['cast'] =movies['cast'].apply(lambda x: [i.replace(\" \", \"\") for i in x])\n",
@@ -2353,7 +2459,9 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "2dc91635",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2490,7 +2598,9 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "57a17a53",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "movies['tags'] = movies['overview'] + movies['genres']+movies['keywords'] + movies['cast']+movies['crew'] "
@@ -2500,7 +2610,9 @@
    "cell_type": "code",
    "execution_count": 56,
    "id": "261b3f9d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2624,7 +2736,9 @@
    "cell_type": "code",
    "execution_count": 57,
    "id": "e70ae9c3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2768,7 +2882,9 @@
    "cell_type": "code",
    "execution_count": 58,
    "id": "1b3d8d06",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df['tags'] = df['tags'].apply(lambda x: \" \".join(x))"
@@ -2778,7 +2894,9 @@
    "cell_type": "code",
    "execution_count": 59,
    "id": "4fb91950",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -2921,7 +3039,9 @@
    "cell_type": "code",
    "execution_count": 60,
    "id": "eba301e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3065,7 +3185,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "id": "b7e2b171",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3085,7 +3207,9 @@
   {
    "cell_type": "markdown",
    "id": "5f25d570",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# NLP"
    ]
@@ -3102,7 +3226,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "id": "2bcff22d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import nltk"
@@ -3112,7 +3238,9 @@
    "cell_type": "code",
    "execution_count": 63,
    "id": "39d3ef11",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from nltk.stem.porter import PorterStemmer\n",
@@ -3123,7 +3251,9 @@
    "cell_type": "code",
    "execution_count": 64,
    "id": "f5ed5574",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def stem(text):\n",
@@ -3137,7 +3267,9 @@
    "cell_type": "code",
    "execution_count": 65,
    "id": "8c1c3eee",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3158,7 +3290,9 @@
    "cell_type": "code",
    "execution_count": 66,
    "id": "d36c4356",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df['tags'] = df['tags'].apply(stem)"
@@ -3168,7 +3302,9 @@
    "cell_type": "code",
    "execution_count": 67,
    "id": "4d65f19a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -3268,7 +3404,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "id": "00e233b0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer"
@@ -3278,7 +3416,9 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "264761a4",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cv = CountVectorizer(max_features = 5000 , stop_words = 'english')"
@@ -3288,7 +3428,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "id": "ada6bfed",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "vectors = cv.fit_transform(df['tags']).toarray()"
@@ -3298,7 +3440,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "id": "99c53772",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -8316,7 +8460,9 @@
    "cell_type": "code",
    "execution_count": 72,
    "id": "94f1eaff",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -13342,7 +13488,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "id": "88faf19d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity"
@@ -13352,7 +13500,9 @@
    "cell_type": "code",
    "execution_count": 74,
    "id": "922f7ea3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13386,7 +13536,9 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "c07fc93c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13416,7 +13568,9 @@
    "cell_type": "code",
    "execution_count": 76,
    "id": "9f084a21",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13439,7 +13593,9 @@
    "cell_type": "code",
    "execution_count": 77,
    "id": "6c02f01d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -13468,7 +13624,9 @@
    "cell_type": "code",
    "execution_count": 78,
    "id": "4703760d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14487,9 +14645,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 79,
    "id": "373a0d1a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14501,7 +14661,7 @@
        " (539, 0.25038669783359574)]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14512,9 +14672,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 80,
    "id": "5c5c0be6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14561,7 +14723,7 @@
        "1216  a sequel to 2004' alien vs. predator, the icon...  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14572,9 +14734,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 81,
    "id": "4dc6b41a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14585,7 +14749,7 @@
        "Name: 507, dtype: object"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14596,9 +14760,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 82,
    "id": "aea16f36",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -14606,7 +14772,7 @@
        "1216"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14617,9 +14783,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 83,
    "id": "1cd62c00",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def movie_recommendor(movie):\n",
@@ -14634,9 +14802,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 84,
    "id": "2f539527",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -14656,8 +14826,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "7eeecfa6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "bfa62a2f-60be-4245-ab2f-1526fb42d1f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Save the DataFrame\n",
+    "df.to_pickle(\"movie_data.pkl\")\n",
+    "\n",
+    "# Save the cosine similarity matrix\n",
+    "with open(\"cosine_similarity.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(cs, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc530b8b-aa08-4ab2-8acd-a1edbac7cf00",
    "metadata": {},
    "outputs": [],
    "source": []
